feat: list stories with premise, title and image
